--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codewave",
+  "homepage": "https://painter98.github.io/user-fetchdata/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
